# beef

./: .gitignore  .gitpublish  AUTHORS  AUTHORS.rst  CONTRIBUTING.rst  HACKING  HACKING.markdown  HACKING.md  INSTALL  INSTALL.markdown  INSTALL.rst  Makefile.am  NEWS  NEWS.markdown  NEWS.md  NEWS.rst  README  README.markdown  README.md  README.rst  autogen.sh  beef.1  configure.ac
doc/: .gitignore  Makefile.am  beef.1.markdown.in  beef.1.text  beef.1.text.in
docs/: Makefile.am  beef.1.rst.in
src/: Makefile.am  compat.h  io.c  io.h  main.c  options.c  options.h
